# tello-control

./: .gitignore  .pylintrc  .readthedocs.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  test_video.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  tello_control.rst
examples/yaw-pid/: main.py  open_loop_controller.py  pid_controller.py
examples/yaw_pid/: main.py
src/tello_control/: __init__.py  controller.py  experiment.py  requirements.txt  structs.py  tello.py  udp_interface.py  utils.py
tello_control/: __init__.py  controller.py  experiment.py  structs.py  tello.py  udp_interface.py  utils.py
tests/hitl/: test_telemetry.py  test_video.py
